--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,30 @@
-
-@import url('https://rsms.me/inter/inter.css');
-
 html {
   font-family: 'Inter', sans-serif;
 }
 
-@supports (font-variation-settings: normal) {
+/*@supports (font-variation-settings: normal) {
     html {
       font-family: 'Inter var', sans-serif;
     }
-}
+}*/
 
 h1 {
   font-weight: 100;
+  font-size: 10vh;
 }
 
 .page-header {
   text-align: center;
+  animation: pulse 5s 1;
+}
+
+@keyframes pulse {
+  0% {
+    color: rgba(0,0,0,0);
+  }
+  100% {
+    color: rgba(0,0,0,1);
+  }
 }
 
 
