--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,10 @@ a{
     margin-top:10vw;
   }
 
+  .menu-title {
+    color: rgba(255,255,255,1)
+  }
+
 }
 
 @media (min-width: 600px) {
@@ -198,6 +202,10 @@ a{
 
   .menu-link-container {
     margin-top:10vw;
+  }
+  
+  .menu-title {
+    color: rgba(255,255,255,1)
   }
 
 }
