--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ a{
 }
 
 
-@media (min-width: 480px) {
+@media (min-width: 480px) and (orientation : portrait) {
   
   html {
     background-color: rgba(0,0,0,0);
@@ -152,6 +152,35 @@ a{
     color: rgba(255,255,255,1)
   }
 
+  .thumbnail-container {
+    margin: 1.5vw 5vw ;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .thumbnail {
+    background-color: rgba(125,125,125,0.1);
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+
+    animation: hamburger 10s
+  }
+
+  .thumbnail > div {
+    background-color: rgba(125,125,125,0.1);
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
+
+  .thumbnail > a {
+    display:inline-block;
+    width: 100%;
+    height: 100%;
+  }
+
 }
 
 @media (min-width: 600px) {
@@ -206,6 +235,52 @@ a{
   
   .menu-title {
     color: rgba(255,255,255,1)
+  }
+
+  .thumbnail-container {
+    margin: 1.5vw 5vw ;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .thumbnail {
+    background-color: rgba(125,125,125,0.1);
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+
+    animation: hamburger 10s
+  }
+
+  .thumbnail > div {
+    background-color: rgba(125,125,125,0.1);
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
+
+  .thumbnail > a {
+    display:inline-block;
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
+@media (min-width: 600px) and (orientation : landscape) {
+
+  .page-header {
+    text-align: left;
+    animation: pulse 5s 1;
+  }
+
+  .navigation {
+    visibility: collapse;
+  }
+
+  #navigation-menu {
+    visibility: hidden;
   }
 
 }
